syntax = "proto3";

package GoGoTalk.ProtoBuf;

message LogoutRequest {
	string UserID = 1;
}